# ChangeLog for dev-util/nvidia-cuda-gdk
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*nvidia-cuda-gdk-352.07 (21 Jul 2015)

  21 Jul 2015; Marius Brehler <marbre@linux.sungazer.de>
  +nvidia-cuda-gdk-352.07.ebuild, metadata.xml:
  dev-util/nvidia-cuda-gdk: Version bump

*nvidia-cuda-gdk-346.46 (19 Mar 2015)

  19 Mar 2015; Marius Brehler <marbre@linux.sungazer.de>
  +nvidia-cuda-gdk-346.46.ebuild:
  Version bump

  19 Jan 2015; Marius Brehler <marbre@linux.sungazer.de>
  nvidia-cuda-gdk-340.29.ebuild:
  Fix /opt/bin/nvidia-healthmon

  01 Dec 2014; Justin Lecher <jlec@gentoo.org> nvidia-cuda-gdk-340.29.ebuild:
  Drop empty lines, clean variable names and quoting

  30 Nov 2014; Marius Brehler <marbre@linux.sungazer.de>
  nvidia-cuda-gdk-340.29.ebuild:
  Fix symlink

  19 Nov 2014; Marius Brehler <marbre@linux.sungazer.de>
  nvidia-cuda-gdk-340.29.ebuild:
  Add ~x86 keyword

*nvidia-cuda-gdk-340.29 (18 Nov 2014)

  18 Nov 2014; Marius Brehler <marbre@linux.sungazer.de>
  +files/nvidia-healthmon, +metadata.xml, +nvidia-cuda-gdk-340.29.ebuild:
  Inital commit.