@@ -2,3 +2,4 @@ DIST cuda_340_29_gdk_linux_32.run 2736726 SHA256 69dd21a556c04982ad720d8eed5ef90
 DIST cuda_340_29_gdk_linux_64.run 2752832 SHA256 c4dcc5294731bc7f01cd0eafe42a6784f897760e2ed44224db9865db6f7cd6fa SHA512 3310600ccddf0f79087aa48c61cf7c10bde2543f041571f1bf7c9721a5e41a993e6b231f6b01e37b22062e0b978da7135d89382b9a3a996b82b04283676469ff WHIRLPOOL 91b5c104140b9beb28fec6733f7fd71478993497bff7e9814777e3a8f2e4242c26bd383fcd3e3fbed94e221cdbecaecc53e98a4779d9f17ca4ee20362f36463d
 DIST cuda_346.46_gdk_linux.run 1888773 SHA256 cae9dde44631ac927bad8237e1380c12977202e1186803db70e8afde0479b6a3 SHA512 ef37196bd97c3c2b4644505dcc28990e6264613d018398251287bf0332709ac1419dcc310197b3426162174703c4a07e5a8c11d4d40035c6df19da741862e8d2 WHIRLPOOL 1a93d876f624c2e83ceea78978a7db50fd31e9120c1f412b7b0bdea47c6e3ea5bf5d291dde1ed4e2363a06ce7f7851c79eb7120aca308d8e05c6363c9935948f
 DIST cuda_352_07_rc_gdk_linux.run 3960546 SHA256 6e25e46d0a20ac5aebc650c59dbb8db2fbcd6bfde1b5d51316b041b8253a18f4 SHA512 46e5328214ffe459a079ff08ad38b3b1e05116e8d5801b8e17667973844d25562fff9ad24c5a8c164df19d92b073960f2ed6ad46c7bb0f6ac79d9a33a5398063 WHIRLPOOL d940ff072e0cdff6d0bc23e26730a5b8592784de08b5cae83c6dfceb8262ec2e457790f02c64aa01cfdf3b9c650a968d1b35b973814bfb9b21650755fd84e6a7
+DIST cuda_352_39_gdk_linux.run 4068489 SHA256 1e32e58f69fe29ee67b845233e7aa9347f37994463252bccbc8bfc8a7104ab5a SHA512 d31c22d420c1e0907ab12971ae014d8d7ae3b0bc9daf930f4048e046d4d1f239dc4d7cb813f52ca5b381e209ced4d4acc435164683342a4ca7e95e56c24a35a0 WHIRLPOOL 724e962ebf89285a93f6e8e6a8d51d5788ab3e39826ea1c10c00861ef9f9d38d3a6bda309e8ae8765a09f495b5b6157848907988b637980f961ad2952d9561bc
