@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*nvidia-cuda-gdk-352.39 (12 Sep 2015)
+
+  12 Sep 2015; Marius Brehler <marbre@linux.sungazer.de>
+  +nvidia-cuda-gdk-352.39.ebuild:
+  dev-util/nvidia-cuda-gdk: Version bump
+
 *nvidia-cuda-gdk-352.07 (21 Jul 2015)
 
   21 Jul 2015; Marius Brehler <marbre@linux.sungazer.de>
